Change base dir

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,16 +1,16 @@
 <nav class="navbar is-dark">
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item" href="/website">
+        <a class="navbar-item" href="/">
           {{ $.Site.Title }}
         </a>
       </div>
   
       <div class="navbar-start">
-        <a class="navbar-item" href="/website">
+        <a class="navbar-item" href="/">
           Home
         </a>
-        <a class="navbar-item" href="/website/posts">
+        <a class="navbar-item" href="/posts">
           Posts
         </a>
       </div>
