--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,12 @@
 {{ define "main" }}
 <section class="section">
-  <main class="container">
-    <h1 class="title">Page not found</h1>
-    <a href="/">Go Home</a>
-  </main>
+  <div class="hero-body">
+    <p class="title">
+      Page Not Found 😬
+    </p>
+    <a class="title has-text-link-dark has-background-light" href="/">
+      Go Back Home
+    </a>
+  </div>
 </section>
 {{ end }}
