--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,9 +1,14 @@
 <a class="box" href="{{ .Permalink }}">
-  <h4 class="title is-4">{{ .Title }}</h4>
-  <h6 class="subtitle has-text-grey is-6">{{ .Summary }}</h6>
-  <div>
-    <span class="tag is-link">{{ .ReadingTime }} Minutes</span>
-    <span class="tag is-dark">{{ .Date.Format "Jan 2, 2006" }}</span>
-    <span class="tag is-warning">{{ .WordCount }} Words</span>
-  </div>
+  <article class="media">
+    <div class="media-left">
+      <figure class="image is-48x48">
+        <img src="/img/char/ima_01_01.png" alt="Image">
+      </figure>
+    </div>
+    <div class="media-content">
+      <div class="content">
+        <h3 class="title is-3 has-text-link">{{ .LinkTitle }}</h3>
+      </div>
+    </div>
+  </article>
 </a>
