--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer has-text-centered">
   <p>
-    Copyright &copy; {{ now.Format "2006" }} {{ $.Site.Title }} | All rights reserved.
+    Copyright &copy; {{ now.Format "2006" }} {{ $.Site.Title }}. All Rights Reserved.
   </p>
 </footer>
