--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,28 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <meta name="keywords" content="blog,travel,food,coffee,bread,canada"/>
-  <meta property="og:site_name" content="{{ $.Site.Title }}"/>
-  <meta property="og:title" content="{{ $.Site.Title }}"/>
-
+  <script type="text/javascript" src="/js/code.js"></script>
   {{ if .IsPage }}
   <title>{{ .Title }} | {{ $.Site.Title }}</title>
-  <meta property="og:type" content="article"/>
-  <meta property="og:title" content="{{ .Title }}"/>
-  <meta property="og:description" content="{{ .Summary }}"/>
-  <meta name="description" content="{{ .Summary }}"/>
-  <meta property="twitter:title" content="{{ .Title }}"/>
-  <meta property="twitter:description" content="{{ .Summary }}"/>
-  <meta property="article:author" content="your-name"/>
-  <meta property="article:published_time" content="{{ .Date }}"/>
   {{ else }}
   <title>{{ $.Site.Title }}</title>
-  <meta name="twitter:card" content="summary"/>
-  <meta property="og:title" content="{{ $.Site.Title }}"/>
-  <meta property="og:description" content="{{ $.Site.Title }}"/>
-  <meta name="description" content="{{ $.Site.Title }}"/>
   {{ end }}
-
 </head>
 
 <body>
