--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,12 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="unse,project,voice,synthesis"/>
+  <meta name="description" content="{{ .Summary }}"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <script type="text/javascript" src="/js/code.js"></script>
   {{ if .IsPage }}
   <title>{{ .Title }} | {{ $.Site.Title }}</title>
+  <meta name="description" content="{{ .Summary }}"/>
   {{ else }}
   <title>{{ $.Site.Title }}</title>
+  <meta name="description" content="UNse - singing synthesizer creator"/>
   {{ end }}
 </head>
 
