--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
   <meta name="description" content="{{ .Summary }}"/>
   {{ else }}
   <title>{{ $.Site.Title }}</title>
-  <meta name="description" content="UNse - singing synthesizer creator"/>
+  <meta name="description" content="Distribute talk/singing characters for free use"/>
   {{ end }}
 </head>
 
