Add meta language and h1 in index page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="unse,project,voice,synthesis"/>
+  <meta http-equiv="content-language" content="en">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <script type="text/javascript" src="/js/code.js"></script>
   {{ if .IsPage }}
