--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 <section class="section">
   <div class="hero-body">
-    <p class="title">
-      Welcome to UNSe Website!
-    </p>
+    <h1 class="title">
+      UNse - singing synthesizer creator
+    </h1>
     <p class="subtitle">
       We hope you enjoy your stay! 🥳🎉
     </p>
