Customizer Initial Commit

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,6 +17,11 @@
         Sample Tiles Page
       </a>
     </div>
+    <div class="block">
+      <a class="block button title is-4 has-text-link-dark has-background-light" href="/customizer">
+        Sample Customizer Page
+      </a>
+    </div>
   </div>
 </section>
 {{ end }}
