--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -28,6 +28,9 @@
         <a class="navbar-item" href="/tiles">
           Tiles
         </a>
+        <a class="navbar-item" href="/customizer">
+          Customizer
+        </a>
       </div>
     </div>
   </div>
