--- a/layouts/customizer/list.html
+++ b/layouts/customizer/list.html
@@ -4,17 +4,17 @@
 
 <div style="display: none">
   <img class="customized-char-part" id="customized-char-body" style="position: absolute; z-index: 1"
-       src="/img/mao_shibisaki/stationary/body.png">
+       src="/img/mao_shibisaki/stationary/body.png" alt="">
   <img class="customized-char-part" id="customized-char-specs" style="position: absolute; z-index: 2"
-       src="/img/mao_shibisaki/stationary/specs1.png">
+       src="/img/mao_shibisaki/stationary/specs1.png" alt="">
   <img class="customized-char-part" id="customized-char-eyebrows" style="position: absolute; z-index: 3"
-       src="/img/mao_shibisaki/eyebrows/eyebrows1.png">
+       src="/img/mao_shibisaki/eyebrows/eyebrows1.png" alt="">
   <img class="customized-char-part" id="customized-char-eyes" style="position: absolute; z-index: 4"
-       src="/img/mao_shibisaki/eyes/eyes5.png">
+       src="/img/mao_shibisaki/eyes/eyes5.png" alt="">
   <img class="customized-char-part" id="customized-char-mouth" style="position: absolute; z-index: 5"
-       src="/img/mao_shibisaki/mouth/mouth4.png">
+       src="/img/mao_shibisaki/mouth/mouth4.png" alt="">
   <img class="customized-char-part" id="customized-char-emotion" style="position: absolute; z-index: 6"
-       src="/img/mao_shibisaki/emotion/cheeks.png">
+       src="/img/mao_shibisaki/emotion/cheeks.png" alt="">
 </div>
 
 <div class="customizations">
@@ -165,7 +165,7 @@
 <canvas id="customized-canvas" width="985" height="2197" style="display: none"></canvas>
 
 <div>
-  <img id="customized-char">
+  <img id="customized-char" src="" alt="">
 </div>
 
 {{ end }}
