Adjust img size

--- a/layouts/customizer/list.html
+++ b/layouts/customizer/list.html
@@ -165,7 +165,7 @@
 <canvas id="customized-canvas" width="985" height="2197" style="display: none"></canvas>
 
 <div>
-  <img id="customized-char" src="" alt="">
+  <img id="customized-char" src="" alt="" width="400">
 </div>
 
 {{ end }}
