--- a/layouts/customizer/list.html
+++ b/layouts/customizer/list.html
@@ -15,72 +15,100 @@
     class="customized-char-part"
     id="customized-char-cheeks"
     style="position: absolute; z-index: 2"
-    src="/img/mao_shibisaki/emotion/cheeks.png"
+    src="/img/mao_shibisaki/cheeks/cheeks2.png"
     alt=""
   />
   <img
     class="customized-char-part"
     id="customized-char-emotion"
     style="position: absolute; z-index: 3"
-    src="/img/mao_shibisaki/emotion/emotion2.png"
+    src="/img/mao_shibisaki/emotion/emotion7.png"
     alt=""
   />
   <img
     class="customized-char-part"
     id="customized-char-mouth"
     style="position: absolute; z-index: 4"
-    src="/img/mao_shibisaki/mouth/mouth4.png"
+    src="/img/mao_shibisaki/mouth/mouth1.png"
     alt=""
   />
   <img
     class="customized-char-part"
     id="customized-char-eyes"
     style="position: absolute; z-index: 5"
-    src="/img/mao_shibisaki/eyes/eyes5.png"
+    src="/img/mao_shibisaki/eyes/eyes1.png"
     alt=""
   />
   <img
     class="customized-char-part"
     id="customized-char-sweat"
     style="position: absolute; z-index: 6"
-    src="/img/mao_shibisaki/emotion/sweat.png"
-    alt=""
-  />
-  <img
-    class="customized-char-part"
-    id="customized-char-tears"
-    style="position: absolute; z-index: 7"
-    src="/img/mao_shibisaki/emotion/tears.png"
-    alt=""
-  />
-  <img
-    class="customized-char-part"
-    id="customized-char-specs-frame"
-    style="position: absolute; z-index: 8"
-    src="/img/mao_shibisaki/stationary/specs2.png"
+    src="/img/mao_shibisaki/sweat/sweat3.png"
     alt=""
   />
   <img
     class="customized-char-part"
     id="customized-char-specs"
-    style="position: absolute; z-index: 9"
-    src="/img/mao_shibisaki/stationary/specs1.png"
+    style="position: absolute; z-index: 7"
+    src="/img/mao_shibisaki/specs/specs1.png"
     alt=""
   />
   <img
     class="customized-char-part"
     id="customized-char-eyebrows"
-    style="position: absolute; z-index: 10"
+    style="position: absolute; z-index: 8"
     src="/img/mao_shibisaki/eyebrows/eyebrows1.png"
     alt=""
   />
   <img
     class="customized-char-part"
     id="customized-char-forelock"
-    style="position: absolute; z-index: 11"
+    style="position: absolute; z-index: 9"
     src="/img/mao_shibisaki/stationary/forelock-50.png"
     alt=""
   />
+
+  <img src="/img/mao_shibisaki/cheeks/cheeks1.png" alt="" />
+  <img src="/img/mao_shibisaki/cheeks/cheeks2.png" alt="" />
+  <img src="/img/mao_shibisaki/emotion/emotion1.png" alt="" />
+  <img src="/img/mao_shibisaki/emotion/emotion2.png" alt="" />
+  <img src="/img/mao_shibisaki/emotion/emotion3.png" alt="" />
+  <img src="/img/mao_shibisaki/emotion/emotion4.png" alt="" />
+  <img src="/img/mao_shibisaki/emotion/emotion5.png" alt="" />
+  <img src="/img/mao_shibisaki/emotion/emotion6.png" alt="" />
+  <img src="/img/mao_shibisaki/emotion/emotion7.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth1.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth2.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth3.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth4.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth5.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth6.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth7.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth8.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth9.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth10.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth11.png" alt="" />
+  <img src="/img/mao_shibisaki/mouth/mouth12.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes1.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes2.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes3.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes4.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes5.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes6.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes7.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes8.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes9.png" alt="" />
+  <img src="/img/mao_shibisaki/eyes/eyes10.png" alt="" />
+  <img src="/img/mao_shibisaki/sweat/sweat1.png" alt="" />
+  <img src="/img/mao_shibisaki/sweat/sweat2.png" alt="" />
+  <img src="/img/mao_shibisaki/sweat/sweat3.png" alt="" />
+  <img src="/img/mao_shibisaki/specs/specs1.png" alt="" />
+  <img src="/img/mao_shibisaki/specs/specs2.png" alt="" />
+  <img src="/img/mao_shibisaki/eyebrows/eyebrows1.png" alt="" />
+  <img src="/img/mao_shibisaki/eyebrows/eyebrows2.png" alt="" />
+  <img src="/img/mao_shibisaki/eyebrows/eyebrows3.png" alt="" />
+  <img src="/img/mao_shibisaki/eyebrows/eyebrows4.png" alt="" />
+  <img src="/img/mao_shibisaki/eyebrows/eyebrows5.png" alt="" />
 </div>
 
 <canvas
@@ -93,308 +121,19 @@
 <section class="section">
   <div class="tile is-ancestor">
     <div class="tile is-4 is-parent">
-      <!-- Add content or other tiles -->
       <img id="customized-char" src="" alt="" width="300" />
     </div>
     <div class="tile is-parent is-vertical">
-      <!-- Add content or other tiles -->
-      <div class="tile is-child box">
-        <table class="table">
-          <tbody>
-            <tr>
-              <td>
-                <a
-                  class="customization-option customization-specs"
-                  id="customization-specs1"
-                  data-type="customization-specs"
-                  data-value="specs1"
-                  >Full</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyebrows"
-                  id="customization-eyebrows1"
-                  data-type="customization-eyebrows"
-                  data-value="eyebrows1"
-                  >Eyebrows1</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyes"
-                  id="customization-eyes1"
-                  data-type="customization-eyes"
-                  data-value="eyes1"
-                  >Eyes1</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-mouth"
-                  id="customization-mouth1"
-                  data-type="customization-mouth"
-                  data-value="mouth1"
-                  >Mouth1</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-emotion"
-                  id="customization-emotion1"
-                  data-type="customization-emotion"
-                  data-value="emotion1"
-                  >Emotion1</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <a
-                  class="customization-option customization-specs"
-                  id="customization-specs2"
-                  data-type="customization-specs"
-                  data-value="specs2"
-                  >Frame</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyebrows"
-                  id="customization-eyebrows2"
-                  data-type="customization-eyebrows"
-                  data-value="eyebrows2"
-                  >Eyebrows2</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyes"
-                  id="customization-eyes2"
-                  data-type="customization-eyes"
-                  data-value="eyes2"
-                  >Eyes2</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-mouth"
-                  id="customization-mouth2"
-                  data-type="customization-mouth"
-                  data-value="mouth2"
-                  >Mouth2</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-emotion"
-                  id="customization-emotion2"
-                  data-type="customization-emotion"
-                  data-value="emotion2"
-                  >Emotion2</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>
-                <a
-                  class="customization-option customization-eyebrows"
-                  id="customization-eyebrows3"
-                  data-type="customization-eyebrows"
-                  data-value="eyebrows3"
-                  >Eyebrows3</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyes"
-                  id="customization-eyes3"
-                  data-type="customization-eyes"
-                  data-value="eyes3"
-                  >Eyes3</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-mouth"
-                  id="customization-mouth3"
-                  data-type="customization-mouth"
-                  data-value="mouth3"
-                  >Mouth3</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-emotion"
-                  id="customization-emotion3"
-                  data-type="customization-emotion"
-                  data-value="emotion3"
-                  >Emotion3</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>
-                <a
-                  class="customization-option customization-eyebrows"
-                  id="customization-eyebrows4"
-                  data-type="customization-eyebrows"
-                  data-value="eyebrows4"
-                  >Eyebrows4</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyes"
-                  id="customization-eyes4"
-                  data-type="customization-eyes"
-                  data-value="eyes4"
-                  >Eyes4</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-mouth"
-                  id="customization-mouth4"
-                  data-type="customization-mouth"
-                  data-value="mouth4"
-                  >Mouth4</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-emotion"
-                  id="customization-emotion4"
-                  data-type="customization-emotion"
-                  data-value="emotion4"
-                  >Emotion4</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>
-                <a
-                  class="customization-option customization-eyebrows"
-                  id="customization-eyebrows5"
-                  data-type="customization-eyebrows"
-                  data-value="eyebrows5"
-                  >Eyebrows5</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyes"
-                  id="customization-eyes5"
-                  data-type="customization-eyes"
-                  data-value="eyes5"
-                  >Eyes5</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-mouth"
-                  id="customization-mouth5"
-                  data-type="customization-mouth"
-                  data-value="mouth5"
-                  >Mouth5</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-emotion"
-                  id="customization-emotion5"
-                  data-type="customization-emotion"
-                  data-value="emotion5"
-                  >Emotion5</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td>
-                <a
-                  class="customization-option customization-eyes"
-                  id="customization-eyes6"
-                  data-type="customization-eyes"
-                  data-value="eyes6"
-                  >Eyes6</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-mouth"
-                  id="customization-mouth6"
-                  data-type="customization-mouth"
-                  data-value="mouth6"
-                  >Mouth6</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-emotion"
-                  id="customization-emotion-cheeks"
-                  data-type="customization-emotion"
-                  data-value="cheeks"
-                  >Cheeks</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <a
-                  class="customization-option customization-specs"
-                  id="customization-specs-none"
-                  data-type="customization-specs"
-                  data-value="none"
-                  >None</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyebrows"
-                  id="customization-eyebrows-none"
-                  data-type="customization-eyebrows"
-                  data-value="none"
-                  >None</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-eyes"
-                  id="customization-eyes-none"
-                  data-type="customization-eyes"
-                  data-value="none"
-                  >None</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-mouth"
-                  id="customization-mouth-none"
-                  data-type="customization-mouth"
-                  data-value="none"
-                  >None</a
-                >
-              </td>
-              <td>
-                <a
-                  class="customization-option customization-emotion"
-                  id="customization-emotion-none"
-                  data-type="customization-emotion"
-                  data-value="none"
-                  >None</a
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
       <div class="tile is-child box" id="icons-area"></div>
-      <div class="tile is-child box" id="icons-selection-area"></div>
+      <div class="tile is-child box" id="icons-selection-area">
+        <div class="tile is-child box" id="icons-cheeks"></div>
+        <div class="tile is-child box" id="icons-emotion"></div>
+        <div class="tile is-child box" id="icons-mouth"></div>
+        <div class="tile is-child box" id="icons-eyes"></div>
+        <div class="tile is-child box" id="icons-sweat"></div>
+        <div class="tile is-child box" id="icons-specs"></div>
+        <div class="tile is-child box" id="icons-eyebrows"></div>
+      </div>
     </div>
   </div>
 </section>
